--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,7 @@
             "polyfills": "src/polyfills.ts",
             "assets": [
               "src/assets",
+              "src/assets/fonts",
               "src/favicon.ico",
               "src/favicon.png",
               "src/favicon.icns",
@@ -25,7 +26,8 @@
               "src/favicon.512x512.png"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": []
           },
