window konumu ayarlandı, aşağı yukarı ok eventleri görmezden gelindi, yardım butonu bidb duyurusuna yönlendirildi

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rehber-app",
   "author": {
     "name": "Öğr. Gör. Uygar AYDİN",
-    "email": "iletisi@uygaraydin.com"
+    "email": "iletisim@uygaraydin.com"
   },
   "keywords": [
     "angular",
