node express modülü eklendi. vt bağlantısı yapıldı.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "e2e": "npm run postinstall:web && ng e2e"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.1.1"
+    "@fortawesome/fontawesome-free": "^5.1.1",
+    "express": "^4.16.3",
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.3",
