--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.1.1",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "^2.16.0"
   },
