--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "rehber-app",
+  "name": "phone-book-app",
   "author": {
-    "name": "Öğr. Gör. Uygar AYDİN",
-    "email": "iletisim@uygaraydin.com"
+    "name": "Uygar Aydin",
+    "email": "hi@uygaraydin.com"
   },
   "keywords": [
     "angular",
@@ -78,6 +78,6 @@
     "typescript": "2.7.2",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.29"
   }
 }
