--- a/package.json
+++ b/package.json
@@ -38,10 +38,11 @@
     "cors": "^2.8.4",
     "express": "^4.16.3",
     "mysql": "^2.16.0"
-  },
+  ,    "tslib": "^1.9.0"
+},
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.6.3",
-    "@angular/cli": "6.0.5",
+    "@angular-devkit/build-angular": "~0.13.0",
+    "@angular/cli": "7.3.10",
     "@angular/common": "6.0.5",
     "@angular/compiler": "6.0.5",
     "@angular/compiler-cli": "6.0.5",
