--- a/package.json
+++ b/package.json
@@ -37,22 +37,22 @@
     "@fortawesome/fontawesome-free": "^5.1.1",
     "cors": "^2.8.4",
     "express": "^4.16.3",
-    "mysql": "^2.16.0"
-  ,    "tslib": "^1.9.0"
-},
+    "mysql": "^2.16.0",
+    "tslib": "^1.9.0"
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "7.3.10",
-    "@angular/common": "6.0.5",
-    "@angular/compiler": "6.0.5",
-    "@angular/compiler-cli": "6.0.5",
-    "@angular/core": "6.0.5",
-    "@angular/forms": "6.0.5",
-    "@angular/http": "6.0.5",
-    "@angular/language-service": "6.0.5",
-    "@angular/platform-browser": "6.0.5",
-    "@angular/platform-browser-dynamic": "6.0.5",
-    "@angular/router": "6.0.5",
+    "@angular/common": "7.2.16",
+    "@angular/compiler": "7.2.16",
+    "@angular/compiler-cli": "7.2.16",
+    "@angular/core": "7.2.16",
+    "@angular/forms": "7.2.16",
+    "@angular/http": "7.2.16",
+    "@angular/language-service": "7.2.16",
+    "@angular/platform-browser": "7.2.16",
+    "@angular/platform-browser-dynamic": "7.2.16",
+    "@angular/router": "7.2.16",
     "@ngx-translate/core": "10.0.1",
     "@ngx-translate/http-loader": "3.0.1",
     "@types/jasmine": "2.8.7",
@@ -76,7 +76,7 @@
     "rxjs": "6.1.0",
     "ts-node": "6.0.3",
     "tslint": "5.10.0",
-    "typescript": "2.7.2",
+    "typescript": "3.2.4",
     "wait-on": "2.1.0",
     "webdriver-manager": "12.0.6",
     "zone.js": "0.8.29"
